# dbg

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: pages.yml
examples/: .gitignore  README.md  build.sh  fix-ghc-lib64.sh  install-toolchains.sh  test-dbg-commands.sh
examples/c/: algos.c
examples/cpp/: algos.cpp
examples/csharp/: Algos.csproj  Program.cs
examples/go/: go.mod  main.go
examples/haskell/: algos.hs
examples/java/: Algos.java
examples/javascript/: algos.js
examples/ocaml/: algos.ml
examples/php/: algos.php
examples/python/: algos.py
examples/ruby/: algos.rb
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/scenarios/: README.md
examples/scenarios/01-pagination-offbyone-py/: broken.py  instructions.md  solution.md
examples/scenarios/02-quadratic-concat-go/: broken  broken.go  go.mod  (+2 more)
examples/zig/: algos.zig
public/: demo.cast  demo.html  gdbg.html  index.html
skills/: SKILL.md
skills/adapters/: _canonical-commands.md  _taxonomy-debug.md  c.md  callgrind.md  cpp.md  dotnet-trace.md  dotnet.md  gdbg.md  go.md  haskell-profile.md  haskell.md  java.md  javascript.md  jitdasm.md  js-profile.md  massif.md  memcheck.md  ocaml.md  perf.md  php-profile.md  php.md  pprof.md  pyprofile.md  python.md  ruby-profile.md  ruby.md  rust.md  zig.md
src/: check.rs  daemon.rs  dap.rs  deps.rs  ghcprof.rs  inspector.rs  jitdasm.rs  lib.rs  main.rs  phpprofile.rs  profile.rs  pty.rs  resolve.rs  transport_common.rs
src/backend/: callgrind.rs  canonical.rs  debugpy_proto.rs  delve.rs  delve_proto.rs  dotnettrace.rs  ghci.rs  ghcprof.rs  jdb.rs  jitdasm.rs  lldb.rs  lldb_dap_proto.rs  massif.rs  memcheck.rs  mod.rs  netcoredbg.rs  netcoredbg_proto.rs  node_inspect.rs  node_proto.rs  nodeprof.rs  ocamldebug.rs  pdb.rs  perf.rs  phpdbg.rs  pprof.rs  pstats.rs  rdbg.rs  stackprof.rs  xdebug.rs
src/commands/: crosstrack.rs  debug.rs  insnhits.rs  lifecycle.rs  mod.rs
src/gdbg/: check.rs  collect.rs  commands.rs  db.rs  main.rs  repl.rs  tests.rs
src/init/: claude.rs  codex.rs  mod.rs
src/session_db/: lifecycle.rs  mod.rs  schema.rs
tests/: daemon_detach.rs
tests/fixtures/: callgrind_native_sample.out  jitdasm_sample.asm  stackprof_callgrind_sample.out  xdebug_cachegrind_sample.out
(+114 files in other folders)
