[package]
name = "dbg-cli"
version = "0.1.3"
edition = "2024"
description = "A universal debugger CLI that lets AI agents observe runtime state instead of guessing from source code"
license = "MIT"
repository = "https://github.com/redknightlois/dbg"
homepage = "https://redknightlois.github.io/dbg/"
keywords = ["debugger", "ai", "agent", "lldb", "profiler"]
categories = ["development-tools::debugging", "command-line-utilities"]

[[bin]]
name = "dbg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["term", "signal", "process", "fs", "poll"] }
regex = "1"
anyhow = "1"
which = "7"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
